--- a/ex2-fetchDataAPI/src/App.css
+++ b/ex2-fetchDataAPI/src/App.css
@@ -18,6 +18,19 @@
   font-size: large;
 }
 
+.table {
+margin: 20px 0;
+}
+.table-row {
+display: flex;
+line-height: 24px;
+white-space: nowrap;
+margin: 10px 0;
+padding: 10px;
+background: #ffffff;
+border: 1px solid #e3e3e3;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
